# test01

mylib/: CMakeLists.txt  main.cpp
mylib/glad/include/glad/: glad.h
mylib/glad/src/: glad.c
mylib/include/: casa.hpp  estrella.hpp  matrix.hpp  pizza.hpp  point.hpp  shaders.hpp  square.hpp  triangle.hpp  vector.hpp
mylib/src/: casa.cpp  estrella.cpp  matrix.cpp  pizza.cpp  point.cpp  square.cpp  triangle.cpp  vector.cpp
